# advanced-claude-proxy

./: Dockerfile.sandbox  README.md  pyproject.toml
src/: __init__.py  main.py
src/dashboard/: app.py
src/memory/: __init__.py  compressor.py  indexer.py
src/plugins/: manager.py
src/plugins/custom/: get_local_weather.py
src/providers/: base.py  local_llms.py  openai_compat.py  registry.py
src/proxy/: budget.py  guardian.py  router.py
src/sandbox/: __init__.py  manager.py
src/security/: __init__.py  auth.py  vault.py
