[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "advanced-claude-proxy"
version = "0.1.0"
description = "A secure, sandboxed, and powerful local proxy for Claude Code and LLMs."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.110.0",
    "uvicorn>=0.29.0",
    "docker>=7.0.0",
    "keyring>=25.1.0",
    "pyjwt>=2.8.0",
    "lancedb>=0.6.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.1",
    "loguru>=0.7.2",
    "httpx>=0.27.0",
    "openai>=1.14.0",
    "jinja2>=3.1.3",
]

[project.scripts]
advanced-claude-proxy = "src.main:run"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
